--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta chatset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="images/user.png">
         <title>Porfile</title>
         <link rel="stylesheet" href="profile.css">
